[package]
name = "annasms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
colored = "2"
dotenv = "0"
futures = "0"
rand = "0"
anyhow = "1"
chrono = "0"
html-entities = "0"
humantime = "2"
log = "0"
num_cpus = "1"
reqwest = { version = "0", features = ["blocking", "cookies", "json", "gzip", "deflate", "multipart", "socks", "stream"] }
rustmix = { git = "https://github.com/asm2025/rustmix.git", tag = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36.0", features = ["full"] }
url = { version = "2", features = ["serde"] }
urlencoding = "2"

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
features = "cargo feature %1"
