[package]
name = "fbsms"
version = "0.1.0"
description = "Facebook Messenger Scraper"
authors = ["asm"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
crossbeam-skiplist = "0"
csv = "1"
dotenv = "0"
fake = "2"
futures = "0"
html-entities = "0"
humantime = "2"
lazy_static = "1"
log = "0"
mime = "0"
num_cpus = "1"
rand = "0"
reqwest_cookie_store = "0"
rpassword = "7"
rustmix = { git = "https://github.com/asm2025/rustmix.git", tag = "0.2.0", features = [
	"audio",
] }
scraper = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
url = { version = "2", features = ["serde"] }
urlencoding = "2"

[workspace.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", rev = "cdc8b57b5cf28ad92642b076d67e610bdb958b2d" }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "cdc8b57b5cf28ad92642b076d67e610bdb958b2d" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev = "cdc8b57b5cf28ad92642b076d67e610bdb958b2d" }
candle-datasets = { git = "https://github.com/huggingface/candle", rev = "cdc8b57b5cf28ad92642b076d67e610bdb958b2d" }
llm-samplers = "=0.0.7"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
features = "cargo feature %1"
